test/tests/errors/error-file-put-wrong-arg-count.sm
// true
// false
// false
/**/
/**/

program{
    file f withbuffer bf: int;
    put(f, bf);
}